[package]

name = "cdfa-fibonacci-pattern-detector"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Advanced Fibonacci harmonic pattern detector for CDFA with GPU acceleration"
keywords = ["trading", "cdfa", "fibonacci", "patterns", "harmonic"]
categories = ["finance", "mathematics", "algorithms"]

[lib]
name = "cdfa_fibonacci_pattern_detector"
crate-type = ["cdylib", "rlib"]

# Standalone crate
[workspace]

[dependencies]
# Core numerical computing
ndarray = { workspace = true }
num-traits = { workspace = true }
approx = { workspace = true }

# SIMD optimization
wide = { workspace = true }

# Parallel processing  
rayon = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Optional hardware acceleration
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }

# Optional GPU support
wgpu = { version = "0.19", optional = true }

# Cache-aligned allocations
aligned-vec = { version = "0.5", optional = true }

# Lock-free data structures
crossbeam = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

# Memory allocator
jemallocator = { version = "0.5.4", optional = true }

# Time handling
chrono = { workspace = true }

# Optimization
smallvec = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
proptest = { workspace = true }
rand = { workspace = true }

[features]
default = ["std", "simd"]
std = []
simd = ["wide/std"]
parallel = ["dep:rayon", "dep:crossbeam", "dep:parking_lot"]
gpu = ["dep:wgpu", "dep:candle-core", "dep:candle-nn"]
cache_aligned = ["dep:aligned-vec"]
jemalloc = ["dep:jemallocator"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
debug = true

[[bench]]
name = "pattern_benchmarks"
harness = false
required-features = ["std"]

[[example]]
name = "pattern_detection"
required-features = ["std"]