[package]

name = "cdfa-torchscript-fusion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Hardware-accelerated TorchScript Fusion for CDFA - Ultra-Performance Signal Fusion"
repository.workspace = true
keywords = ["cdfa", "torchscript", "gpu-acceleration", "fusion", "trading"]
categories = ["algorithms", "mathematics", "hardware-support"]

# Standalone crate
[workspace]

[dependencies]
# Core CDFA dependencies
cdfa-core = { path = "../cdfa-core" }
cdfa-simd = { path = "../cdfa-simd", optional = true }
cdfa-parallel = { path = "../cdfa-parallel", optional = true }

# Core dependencies
ndarray = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

# Hardware acceleration - GPU compute
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
wgpu = { version = "0.19", optional = true }
bytemuck = { workspace = true }

# Alternative tensor libraries
tch = { workspace = true, optional = true }  # PyTorch bindings
ort = { workspace = true, optional = true }   # ONNX Runtime

# High-performance computing
rayon = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
atomic_float = { workspace = true }
smallvec = { workspace = true }
arrayvec = { workspace = true }

# SIMD and optimization
wide = { workspace = true }
pulp = { workspace = true }

# Memory management
once_cell = { workspace = true }

# Async support
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
futures = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }
approx = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["candle", "gpu", "simd"]

# Hardware acceleration backends
candle = ["dep:candle-core", "dep:candle-nn"]
pytorch = ["dep:tch"]
onnx = ["dep:ort"]

# GPU support
gpu = ["dep:wgpu"]
cuda = ["dep:tch"]
rocm = ["dep:tch"]
metal = []

# CPU optimizations
simd = ["dep:cdfa-simd", "cdfa-simd?/avx2", "cdfa-simd?/avx512"]
avx2 = ["dep:cdfa-simd"]
avx512 = ["dep:cdfa-simd"]
neon = ["dep:cdfa-simd"]

# Parallel processing
parallel = ["dep:cdfa-parallel"]

# Serialization
serde = ["dep:serde", "dep:serde_json", "cdfa-core/serde"]

# Development features
benchmarking = []
profiling = []

[lib]
name = "cdfa_torchscript_fusion"
path = "src/lib.rs"

[[bench]]
name = "fusion_benchmarks"
harness = false

[[bench]]
name = "gpu_acceleration_benchmarks"
harness = false

[target.'cfg(target_arch = "x86_64")'.dependencies]
# x86_64 specific optimizations

[target.'cfg(target_arch = "aarch64")'.dependencies]
# ARM64 specific optimizations

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific GPU libraries

[target.'cfg(target_os = "macos")'.dependencies]
# macOS Metal acceleration

[target.'cfg(target_os = "windows")'.dependencies]
# Windows DirectX/CUDA support