[package]
name = "cdfa-unified"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["CDFA Development Team", "TENGRI Trading Swarm <swarm@tengri.ai>"]
description = "Unified Cross-Domain Feature Alignment (CDFA) library with complete functionality from all specialized crates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tengri/nautilus-trader"
keywords = ["cdfa", "trading", "finance", "patterns", "machine-learning", "simd", "parallel"]
categories = ["algorithms", "mathematics", "science", "finance"]
readme = "README.md"

[lib]
name = "cdfa_unified"
crate-type = ["cdylib", "rlib"]
path = "src/lib_ultra_minimal.rs"

[dependencies]
# Core numerical computing
ndarray = { version = "0.15", features = ["serde", "rayon"] }
nalgebra = { version = "0.32" }
num-traits = { version = "0.2" }
num-complex = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
toml = { version = "0.8", optional = true }
serde_yaml = { version = "0.9", optional = true }
ron = { version = "0.8", optional = true }

# Error handling and utilities
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
itertools = { version = "0.12" }
once_cell = { version = "1.19" }
smallvec = { version = "1.11" }
arrayvec = { version = "0.7" }
ahash = { version = "0.8" }

# SIMD optimization
wide = { version = "0.7", optional = true }
pulp = { version = "0.18", optional = true }
simba = { version = "0.8", optional = true }
ultraviolet = { version = "0.9", optional = true }
bytemuck = { version = "1.14", optional = true }

# Parallel processing
rayon = { version = "1.8", optional = true }
crossbeam = { version = "0.8", optional = true }
dashmap = { version = "5.5", optional = true }
parking_lot = { version = "0.12", optional = true }
tokio = { version = "1.35", optional = true, features = ["full"] }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

# Machine learning frameworks
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }
linfa = { version = "0.7", optional = true }
linfa-linear = { version = "0.7", optional = true }
linfa-clustering = { version = "0.7", optional = true }
linfa-trees = { version = "0.7", optional = true }
linfa-svm = { version = "0.7", optional = true }
linfa-reduction = { version = "0.7", optional = true }
smartcore = { version = "0.3", optional = true }

# Additional ML dependencies
zstd = { version = "0.13", optional = true }
flate2 = { version = "1.0", optional = true }
brotli = { version = "3.4", optional = true }
rmp-serde = { version = "1.1", optional = true }
serde_cbor = { version = "0.11", optional = true }

# Statistical and mathematical operations
statrs = { version = "0.16" }
rustfft = { version = "6.1", optional = true }
approx = { version = "0.5" }
special = { version = "0.10", optional = true }
peroxide = { version = "0.37", optional = true }

# Random number generation
rand = { version = "0.8" }
rand_distr = { version = "0.4", optional = true, default-features = false }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
instant = { version = "0.1", optional = true }

# Cache and optimization
lru = { version = "0.12", optional = true }
memmap2 = { version = "0.9", optional = true }

# Hardware acceleration
accelerate-src = { version = "0.3", optional = true }
intel-mkl-src = { version = "0.8", optional = true }
openblas-src = { version = "0.10", optional = true }

# GPU support
wgpu = { version = "0.19", optional = true }
half = { version = "2.3", optional = true }
pollster = { version = "0.3", optional = true }

# CUDA support
# cudarc = { version = "0.11", optional = true }
# cuda-types = { version = "0.3", optional = true }

# Metal support (macOS)
# metal = { version = "0.27", optional = true }
# objc = { version = "0.2", optional = true }
# core-graphics = { version = "0.23", optional = true }

# Memory allocators
mimalloc = { version = "0.1", optional = true }
jemallocator = { version = "0.5.4", optional = true }
bumpalo = { version = "3.14", optional = true }

# STDP and neural optimization
quanta = { version = "0.12", optional = true }
atomic_refcell = { version = "0.1", optional = true }
arc-swap = { version = "1.6", optional = true }
typed-arena = { version = "2.0", optional = true }

# CPU feature detection
raw-cpuid = { version = "11.0", optional = true }
target-lexicon = { version = "0.12", optional = true }
target-features = { version = "0.1", optional = true }

# Thread management
num_cpus = { version = "1.16", optional = true }
threadpool = { version = "1.8", optional = true }
core_affinity = { version = "0.8", optional = true }
libc = { version = "0.2", optional = true }
atomic_float = { version = "0.1", optional = true }

# Networking (for distributed systems)
petgraph = { version = "0.6", optional = true }

# Redis integration (for distributed communication)
redis = { version = "0.25.2", features = ["tokio-comp", "connection-manager"], optional = true }
rmp = { version = "0.8", optional = true }
uuid = { version = "1.8", features = ["v4", "serde"], optional = true }
sha2 = { version = "0.10", optional = true }

# Technical analysis
ta = { version = "0.5", optional = true }

# Logging and metrics
tracing = { version = "0.1" }
log = { version = "0.4" }
metrics = { version = "0.22", optional = true }

# Audit system dependencies
# sha2, bincode, flate2 already declared above as optional
hostname = { version = "0.4", optional = true }
sys-info = { version = "0.9", optional = true }

# Python interop
pyo3 = { version = "0.25.1", features = ["extension-module"], optional = true }
numpy = { version = "0.25", optional = true }
tempfile = { version = "3.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { version = "1.4" }
pretty_assertions = { version = "1.4" }
approx = { version = "0.5" }
rand = { version = "0.8" }
tokio-test = { version = "0.4" }
tempfile = { version = "3.8" }
quickcheck = { version = "1.0" }
quickcheck_macros = { version = "1.0" }
cargo-tarpaulin = "0.32.8"

[build-dependencies]
cc = "1.0"
rustc_version = "0.4"
chrono = { version = "0.4" }

[features]
# Default features - core functionality with common optimizations
default = ["core", "algorithms", "simd", "parallel", "serde-support", "combinatorial"]

# Core modules
core = []
algorithms = ["dep:rustfft", "dep:ta"]
parallel = ["dep:rayon", "dep:crossbeam", "dep:dashmap", "dep:parking_lot", "dep:num_cpus", "dep:threadpool"]
rayon = ["dep:rayon"]
num_cpus = ["dep:num_cpus"]
tokio = ["dep:tokio"]
combinatorial = []
simd = ["dep:wide", "dep:pulp", "dep:simba", "dep:ultraviolet", "dep:bytemuck"]

# Advanced features
ml = [
    "serde-support",
    "dep:linfa", 
    "dep:linfa-linear", 
    "dep:linfa-clustering",
    "dep:linfa-trees",
    "dep:linfa-svm",
    "dep:linfa-reduction",
    "dep:smartcore",
    "dep:zstd",
    "dep:flate2",
    "dep:brotli",
    "dep:rmp-serde",
    "dep:serde_cbor",
    "dep:parking_lot",
    "dep:sha2",
    "dep:uuid"
]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
detectors = ["algorithms", "simd", "parallel"]
advanced-detectors = ["detectors", "dep:special", "dep:peroxide", "dep:rand_distr"]

# Performance profiles
gpu = ["dep:wgpu", "dep:half"]
# cuda = ["gpu", "dep:cudarc", "dep:cuda-types"]
# metal = ["gpu"]
webgpu = ["gpu"]
avx512 = ["simd", "dep:target-features"]
runtime-detection = ["dep:raw-cpuid", "dep:target-lexicon"]

# Hardware acceleration
mkl = ["dep:intel-mkl-src"]
openblas = ["dep:openblas-src"]
accelerate = ["dep:accelerate-src"]

# Memory allocators
jemalloc = ["dep:jemallocator"]
mimalloc = ["dep:mimalloc"]
bumpalo = ["dep:bumpalo"]

# STDP neural optimization
stdp = ["dep:quanta", "dep:atomic_refcell", "dep:arc-swap", "dep:typed-arena", "simd", "parallel", "mimalloc", "dep:rand_distr"]

# Language bindings
python = ["dep:pyo3", "dep:numpy"]
c-bindings = ["dep:libc"]
ffi = ["c-bindings", "python"]

# Async support
async = ["dep:tokio", "dep:async-trait", "dep:futures"]

# Audit system feature
audit = ["async", "serde-support", "dep:tokio", "dep:sha2", "dep:bincode", "dep:hostname", "dep:sys-info", "dep:flate2", "dep:tempfile"]

# Distributed computing
distributed = ["async", "parallel", "dep:petgraph"]

# Redis integration
redis-integration = ["async", "distributed", "dep:redis", "dep:rmp", "dep:rmp-serde", "dep:uuid", "dep:sha2", "dep:flate2", "dep:lru"]

# Serialization
serde = []
serde-support = ["serde", "dep:serde_json", "dep:bincode", "dep:ron", "dep:toml", "dep:serde_yaml"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]
ron = ["dep:ron"]

# Development and testing
full-performance = ["simd", "parallel", "gpu", "ml", "advanced-detectors", "distributed"]
benchmarks = []
testing = []

# Compatibility features for migration from individual crates
compat-core = ["core"]
compat-algorithms = ["algorithms"]
compat-parallel = ["parallel"]
compat-simd = ["simd"]
compat-ml = ["ml"]
compat-detectors = ["detectors"]

# Benchmarks
[[bench]]
name = "unified_benchmarks"
harness = false

[[bench]]
name = "comprehensive_performance_suite"
harness = false
path = "benches/comprehensive_performance_suite.rs"

[[bench]]
name = "performance_analysis_suite"
harness = false
path = "benches/performance_analysis_suite.rs"

[[bench]]
name = "simd_benchmarks"
harness = false
path = "benches/suites/simd_benchmarks.rs"

[[bench]]
name = "parallel_benchmarks"
harness = false
path = "benches/suites/parallel_benchmarks.rs"

[[bench]]
name = "memory_benchmarks"
harness = false
path = "benches/suites/memory_benchmarks.rs"

[[bench]]
name = "gpu_benchmarks"
harness = false
path = "benches/suites/gpu_benchmarks.rs"
required-features = ["gpu"]

[[bench]]
name = "distributed_benchmarks"
harness = false
path = "benches/suites/distributed_benchmarks.rs"
required-features = ["distributed", "redis-integration"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
