[package]
name = "ceflann-elm"
version = "0.1.0"
edition = "2021"
description = "Computationally Efficient Functional Link Artificial Neural Network with Extreme Learning Machine"
authors = ["Neuromorphic Swarm Agent <elm-engineer@quantum-hive.ai>"]

# Standalone crate
[workspace]

[dependencies]
# High-performance linear algebra
nalgebra = { version = "0.33.2", features = ["rayon", "serde"] }
ndarray = { version = "0.16.1", features = ["rayon", "serde", "blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
lapack-src = { version = "0.8", features = ["openblas"] }

# SIMD optimization
wide = "0.7"
simdeez = "1.0"
rayon = "1.10.0"

# Mathematical functions
special = "0.10"  # For Hermite, Chebyshev polynomials
libm = "0.2"      # For efficient math functions

# Serialization and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = "0.4"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Async runtime
tokio = { version = "1.46", features = ["full"] }

# CUDA support (optional)
cudarc = { version = "0.9", optional = true }
half = { version = "2.3", optional = true }

# Quantum-hive integration (removed to prevent circular dependency)
# quantum-hive = { path = "../quantum-hive" }

# Performance monitoring
criterion = { version = "0.5", optional = true }

[features]
default = ["simd", "openblas"]
simd = []
cuda = ["cudarc", "half"]
openblas = []
benchmarks = ["criterion"]

[dev-dependencies]
approx = "0.5"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = true