[package]
name = "game-theory-engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TENGRI Trading Swarm <swarm@tengri.ai>"]
description = "Game Theory Engine with Machiavellian Tactics and Nash Equilibrium Solving"

[lib]
name = "game_theory_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core async/concurrency
tokio = { version = "1.46", features = ["full", "rt-multi-thread", "macros"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
tracing = "0.1"

# Mathematical computing
nalgebra.workspace = true
ndarray = { version = "0.15", features = ["rayon", "serde"] }
num-traits = "0.2"
num-complex = "0.4"
statrs = "0.16"
approx = "0.5"

# Linear programming and optimization
good_lp = { version = "1.6", optional = true }
minilp = { version = "0.2", optional = true }

# Graph theory for game trees
petgraph = "0.6"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Performance
parking_lot = "0.12"
rayon = "1.7"

# Machine learning for strategy learning (commented out until workspace exists)
# candle-core = { version = "0.3", optional = true }
# candle-nn = { version = "0.3", optional = true }

# Monte Carlo tree search
mcts = { version = "0.2", optional = true }

# Market regime integration (commented out - no such crate exists)
# market-regime-detector = { path = "../market-regime-detector" }

# Python bindings
pyo3 = { version = "0.25.1", features = ["extension-module"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"

[features]
default = ["nash-solver", "machiavellian", "coalition-games"]
nash-solver = ["dep:good_lp"]
machiavellian = []
coalition-games = []
mechanism-design = []
auction-theory = []
behavioral-games = []
evolutionary-games = []
# machine-learning = ["dep:candle-core", "dep:candle-nn"]
monte-carlo = ["dep:mcts"]
python = ["dep:pyo3"]

[[bench]]
name = "nash_equilibrium_benchmark"
harness = false

[[bench]]
name = "game_tree_benchmark"
harness = false

[[bench]]
name = "mechanism_design_benchmark"
harness = false