[package]
name = "gpu-marl"
version = "0.1.0"
edition = "2021"
description = "GPU-Native Massive Multi-Agent Reinforcement Learning"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
bytemuck = { version = "1.21", features = ["derive"] }
pollster = "0.4"

# GPU compute via wgpu (works with AMD/Metal/Vulkan)
wgpu = { version = "25", features = ["metal"] }

# Agent state types from warp-hyperphysics
warp-hyperphysics = { path = "../physics-engines/warp-hyperphysics" }

[dev-dependencies]
approx = "0.5"
