[package]
name = "hive-mind-rust"
version = "0.1.0"
edition = "2021"
description = "Rust-based hive-mind collective intelligence system for Ximera trading platform"
license = "MIT OR Apache-2.0"
authors = ["Ximera Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hive-mind-server"
path = "src/bin/main.rs"

[[bin]]
name = "secure-hive-mind"
path = "src/bin/secure_main.rs"

[dependencies]
# Core async runtime (aligned with existing Ximera backend)
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "time", "sync"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Networking and communication
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
libp2p = { version = "0.53", features = ["tcp", "mdns", "noise", "yamux", "gossipsub", "kad", "identify", "ping", "websocket"] }

# Performance optimization (matching existing patterns)
rayon = "1.8"
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "6.1"
arc-swap = "1.6"

# Memory management
mimalloc = { version = "0.1", default-features = false }

# Consensus algorithms
raft = { version = "0.7", optional = true }
libp2p-gossipsub = "0.46"

# Neural and ML capabilities (temporarily disabled due to compilation issues)
# candle-core = { version = "0.3", optional = true }
# candle-nn = { version = "0.3", optional = true } 
# tch = { version = "0.13", optional = true }

# Cryptography and security
sha2 = "0.10"
blake3 = "1.5"
ring = { version = "0.17", optional = true }
x25519-dalek = { version = "2.0", optional = true }
ed25519-dalek = { version = "2.0", optional = true }
rand = { version = "0.8", features = ["getrandom"] }
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
hmac = "0.12"
jsonwebtoken = "9.3"
validator = { version = "0.18", features = ["derive"] }
base64 = "0.22"
rust_decimal = "1.36"

# TLS certificate management
rcgen = "0.12"
x509-parser = "0.15"
pem = "3.0"
time = { version = "0.3", features = ["formatting", "parsing"] }

# Additional compliance and security dependencies
aes-gcm = "0.10"
secrecy = { version = "0.8", features = ["alloc", "serde"] }
totp-rs = "5.4"
qrcode = "0.14"
image = "0.25"

# Database and persistence (updated to secure version)
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
sled = "0.34"

# System utilities
num_cpus = "1.16"
hex = "0.4"

# Configuration and CLI (replace yaml-rust with serde_yaml)
config = { version = "0.14", default-features = false, features = ["toml", "json"] }
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
prometheus = "0.14"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing and development
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.12"
futures = "0.3"
rand = "0.8"
hex = "0.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
fake = "2.9"
serial_test = "3.0"
rstest = "0.18"
# tarpaulin = "0.27" # Removed - not available in this environment
ctor = "0.2"
once_cell = "1.19"
test-log = "0.2"
env_logger = "0.10"
wiremock = "0.5"
assert_matches = "1.5"

# WebAssembly support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Feature flags
[features]
default = ["consensus", "crypto", "compliance"]
consensus = ["dep:raft"]
# neural = ["dep:candle-core", "dep:candle-nn"] # Disabled temporarily
crypto = ["dep:ring", "dep:x25519-dalek", "dep:ed25519-dalek"]
# pytorch = ["dep:tch"] # Disabled temporarily
compliance = ["audit-trail", "data-protection", "access-control", "regulatory-reporting"]
audit-trail = []
data-protection = []
access-control = []
regulatory-reporting = []
gpu = []
wasm = []

# Optimization profiles
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
overflow-checks = false
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true

# Benchmarks will be added later
# [[bench]]
# name = "consensus_benchmark"
# harness = false